--- a/style.css
+++ b/style.css
@@ -50,3 +50,9 @@ button:-moz-focusring,
   --para-size: 0.8rem;
   --label-text-size: 1rem;
 }
+
+body {
+  font-family: "Poppins", system-ui, -apple-system, BlinkMacSystemFont,
+ 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+ background-color: var(--primary-color);
+}
