--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ body {
   background-color: var(--primary-color);
   height: 100vh;
   width: 100vw;
+  overflow: hidden;
 
   display: flex;
   justify-content: center;
