--- a/style.css
+++ b/style.css
@@ -127,3 +127,19 @@ form:hover::before {
 }
 
 /* Form Element Styles End */
+
+.left-container {
+  max-width: 40%;
+  height: 100%;
+  padding: 3rem;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.left-container p {
+  letter-spacing: 1px;
+  line-height: 1.5;
+}
