--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ form:hover::before {
 /* Form Element Styles End */
 
 .left-container {
-  max-width: 40%;
+  width: 40%;
   height: 100%;
   padding: 3rem;
 
