--- a/style.css
+++ b/style.css
@@ -153,3 +153,8 @@ form:hover::before {
   border-top-left-radius: 30%;
   border-bottom-left-radius: 30%;
 }
+
+.right-container h1 {
+  text-align: center;
+  margin-top: 1.6rem;
+}
