--- a/style.css
+++ b/style.css
@@ -158,3 +158,13 @@ form:hover::before {
   text-align: center;
   margin-top: 1.6rem;
 }
+
+.input-container {
+  width: 100%;
+  margin-top: 3rem;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 32px;
+}
