--- a/style.css
+++ b/style.css
@@ -164,6 +164,7 @@ form:hover::before {
   margin-top: 3rem;
 
   display: flex;
+  justify-content: center;
   align-items: center;
   gap: 22px;
 }
