--- a/style.css
+++ b/style.css
@@ -172,3 +172,24 @@ form:hover::before {
 label {
   display: none;
 }
+
+.input-left {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+
+.input-left input {
+  width: 220px;
+  height: 40px;
+  padding: 10px;
+  background-color: var(--secondary-color);
+  border: none;
+  border-radius: 5px;
+}
+
+.input-left input:focus {
+  box-shadow: 4px 4px 0 var(--tertiary-color), 4px 4px 10px var(--tertiary-color);
+  outline: none;
+  transition: box-shadow 300ms ease-in-out;
+}
