--- a/style.css
+++ b/style.css
@@ -169,10 +169,6 @@ form:hover::before {
   gap: 22px;
 }
 
-label {
-  display: none;
-}
-
 .input-left {
   display: flex;
   flex-direction: column;
@@ -192,4 +188,27 @@ label {
   box-shadow: 4px 4px 0 var(--tertiary-color), 4px 4px 10px var(--tertiary-color);
   outline: none;
   transition: box-shadow 300ms ease-in-out;
+}
+
+.input-left div:first-of-type {
+  position: relative;
+}
+
+.input-left div:last-of-type {
+  position: relative;
+}
+
+.input-left label {
+  position: absolute;
+  top: 50%;
+  left: 2%;
+  transform: translateY(-50%);
+  color: var(--primary-color);
+  transition: 500ms;
+}
+
+.input-left input:focus ~ label,
+.input-left input:valid ~ label {
+  top: -12px;
+  color: var(--secondary-color);
 }
