--- a/style.css
+++ b/style.css
@@ -152,6 +152,11 @@ form:hover::before {
   border-radius: 15px;
   border-top-left-radius: 30%;
   border-bottom-left-radius: 30%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .right-container h1 {
