--- a/style.css
+++ b/style.css
@@ -182,7 +182,7 @@ form:hover::before {
 
 .input-left input,
 .input-right input {
-  width: 220px;
+  width: clamp(170px, 15vw + 0.65rem, 250px);
   height: 40px;
   padding: 10px;
   background-color: var(--secondary-color);
@@ -239,4 +239,6 @@ button[type="submit"] {
   border: none;
   border-radius: 5px;
   margin-top: 2.5rem;
+  position: relative;
 }
+
