Change Email Input Label Color When Invalid

--- a/style.css
+++ b/style.css
@@ -253,6 +253,10 @@ form:hover::before {
   color: var(--secondary-color);
 }
 
+.input-left input[type="email"]:invalid:not(:placeholder-shown) + label {
+  color: var(--tertiary-color);
+}
+
 .right-container div:last-of-type {
   display: flex;
   justify-content: center;
