Change Color To Red When Inputs Right Are Invalid

--- a/style.css
+++ b/style.css
@@ -253,7 +253,8 @@ form:hover::before {
   color: var(--secondary-color);
 }
 
-.input-left input[type="email"]:invalid:not(:placeholder-shown) ~ label {
+.input-left input:invalid:not(:placeholder-shown) ~ label,
+.input-right input:invalid:not(:placeholder-shown) ~ label {
   color: var(--tertiary-color);
 }
 
