--- a/style.css
+++ b/style.css
@@ -244,7 +244,7 @@ form:hover::before {
 .input-left input:focus ~ label,
 .input-left input:not(:placeholder-shown) ~ label,
 .input-right input:focus ~ label,
-.input-right input:valid ~ label {
+.input-right input:not(:placeholder-shown) ~ label {
   top: -12px;
   color: var(--secondary-color);
 }
