Fix Confirm Pass Validation Sign Issue

--- a/style.css
+++ b/style.css
@@ -239,14 +239,16 @@ form:hover::before {
 }
 
 .input-left input:invalid:not(:placeholder-shown) + span::before,
-.input-right input:invalid:not(:placeholder-shown) + span::before {
+.input-right input:invalid:not(:placeholder-shown) + span::before,
+.input-right input[type="password"]:not(:placeholder-shown).invalid + span::before {
   content: "❌";
   font-size: 1.4rem;
   color: var(--tertiary-color);
 }
 
 .input-left input:valid:not(:placeholder-shown) + span::before,
-.input-right input:valid:not(:placeholder-shown) + span::before {
+.input-right input:valid:not(:placeholder-shown) + span::before,
+.input-right input[type="password"]:not(:placeholder-shown).valid + span::before {
   content: "✔";
   font-size: 1.4rem;
   color: #1dd41d;
